--- a/app/src/main/res/layout/row_activity.xml
+++ b/app/src/main/res/layout/row_activity.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:padding="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
